--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ on:
       LOCATION:
         description: 'Azure Region'
         required: true
-        default: 'EastUS2'
+        default: 'Central India'
 
       # This is the name of your Azure Databricks resource
       WORKSPACE_NAME:
